# pdm-buildlocked

./: README.md  build_locked.py  pyproject.toml
